# cuber

./: README.md  cuber.py  cubie.py  pyproject.toml
cuber/: cuber.py  cubie.py
cuber/tests/: test_cuber.py
tests/: __init__.py  test_cuber.py
